@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.87 2000/11/10 11:48:31 stelian Exp $
+$Id: CHANGES,v 1.88 2000/11/10 13:22:10 stelian Exp $
 
 Changes between versions 0.4b19 and 0.4b20 (released ???????????????)
 =====================================================================
@@ -45,6 +45,11 @@ Changes between versions 0.4b19 and 0.4b20 (released ???????????????)
 	present in either /etc/fstab or /etc/dumpdates, and present
 	the list in the same order as in fstab file. Thanks
 	to Andreas Dilger <adilger@turbolinux.com> for the patch.
+
+10.	Made dump's -a (automatic end of tape detection) the
+	default. Specifying one of -B, -c, -d or -s options will
+	override the EOM detection. Thanks to Andreas Dilger
+	<adilger@turbolinux.com> for the patch.
 
 Changes between versions 0.4b18 and 0.4b19 (released August 20, 2000)
 =====================================================================
